# artebot-ros-control

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  artebot_control.xml  package.xml
.devcontainer/: Dockerfile  devcontainer.json
bringup/config/: artebot_controllers.yaml
bringup/launch/: artebot.launch.py
description/ros2_control/: artebot.ros2_control.xacro
description/urdf/: artebot.urdf.xacro
hardware/include/artebot_control/: artebot_system.hpp  delay.h  serial_motor.hpp  serial_port.h  uart_comp.h  visibility_control.h
hardware/src/: artebot_system.cpp  serial_motor.cpp  serial_port.c  uart_comp.c
hardware/test/: test_artebot_system.cpp
